--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -53,8 +53,7 @@ jobs:
           HUGO_ENV: production
         run: |
           hugo \
-            --gc --minify \
-            --baseURL "https:/gedankenbrut.de/"
+            --gc --minify
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
