--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -55,7 +55,7 @@ jobs:
           hugo \
             --gc --minify
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           path: ./public
 
