test: theme change

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 
 title: 💡 gedankenbrut
-theme: minima
+url: "https://gedankenbrut.de"
+plugins:
+  - jekyll-remote-theme
+theme: forty-jekyll-theme
