--- a/_config.yml
+++ b/_config.yml
@@ -1,37 +1,12 @@
-# site settings
 title: 💡 gedankenbrut
-# subtitle: by HTML5 UP
-# email: youremailaddress@gmail.com
-# description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
-# baseurl: "/forty-jekyll-theme" # the subpath of your site, e.g. /blog
 url: "https://gedankenbrut.de"
-# author:
-# street_address: 1234 Somewhere Road
-# city: Nashville
-# state: TN
-# zip_code: 55555
-# country: United States of America
-# phone: (716) 555-5555
 
-# homepage tiles
 tiles-source: posts # accepts "posts" or "pages"
 tiles-count: 6
 
-# social settings (key must match name of font awesome icon)
-# see https://fontawesome.com/icons?d=gallery&p=2&s=brands
-# Icons are not shown if value is empty
-# You need to restart jekyll for changes to have an effect
-# socials:
-#   GitHub: https://github.com/andrewbanchich
-#   GitLab:
-#   Google-Plus: https://plus.google.com/u/0/+AndrewBanchich
-#   Instagram:
-#   LinkedIn: https://www.linkedin.com/in/andrew-banchich-a4ba1195
-#   Twitter: https://twitter.com/andrewbanchich
-#   Facebook:
-#   Slack:
+plugins:
+  - jekyll-feed
 
-# build settings
 markdown: kramdown
 
 sass:
